--- a/.gitignore
+++ b/.gitignore
@@ -467,3 +467,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,windows,sublimetext,vscode,node,react,reactnative
+.vercel
